src/org/ffmpeg/avresample/AvresampleLibrary.java

	protected native static int avresample_convert(@Ptr long avr, @Ptr long output, int out_plane_size, int out_samples, @Ptr long input, int in_plane_size, int in_samples);
	/**
	 * Original signature : <code>int avresample_get_delay(AVAudioResampleContext*)</code><br>
	 * <i>native declaration : libavresample/avresample.h:64</i>
	 */
	public static int avresample_get_delay(Pointer<AVAudioResampleContext > avr) {
		return avresample_get_delay(Pointer.getPeer(avr));
	}
	protected native static int avresample_get_delay(@Ptr long avr);
	/**
	 * Original signature : <code>int avresample_available(AVAudioResampleContext*)</code><br>
	 * <i>native declaration : libavresample/avresample.h:66</i>
	 */
	public static int avresample_available(Pointer<AVAudioResampleContext > avr) {
		return avresample_available(Pointer.getPeer(avr));
	}
	protected native static int avresample_available(@Ptr long avr);
	/**
	 * Original signature : <code>int avresample_read(AVAudioResampleContext*, uint8_t**, int)</code><br>
	 * <i>native declaration : libavresample/avresample.h:68</i>
	 */
	public static int avresample_read(Pointer<AVAudioResampleContext > avr, Pointer<Pointer<Byte > > output, int nb_samples) {
		return avresample_read(Pointer.getPeer(avr), Pointer.getPeer(output), nb_samples);
	}
	protected native static int avresample_read(@Ptr long avr, @Ptr long output, int nb_samples);
	/**
	 * Original signature : <code>int avresample_convert_frame(AVAudioResampleContext*, AVFrame*, AVFrame*)</code><br>
	 * <i>native declaration : libavresample/avresample.h:70</i>
	 */
	public static int avresample_convert_frame(Pointer<AVAudioResampleContext > avr, Pointer<AVFrame > output, Pointer<AVFrame > input) {
		return avresample_convert_frame(Pointer.getPeer(avr), Pointer.getPeer(output), Pointer.getPeer(input));
	}
	protected native static int avresample_convert_frame(@Ptr long avr, @Ptr long output, @Ptr long input);
	/**
	 * Original signature : <code>int avresample_config(AVAudioResampleContext*, AVFrame*, AVFrame*)</code><br>
	 * <i>native declaration : libavresample/avresample.h:72</i>
	 */
	public static int avresample_config(Pointer<AVAudioResampleContext > avr, Pointer<AVFrame > out, Pointer<AVFrame > in) {
		return avresample_config(Pointer.getPeer(avr), Pointer.getPeer(out), Pointer.getPeer(in));
	}
	protected native static int avresample_config(@Ptr long avr, @Ptr long out, @Ptr long in);
}
